# dataspider

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  scraped_data.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dataspider/: __init__.py  dataspider.py
tests/: test_dataspider.py
